# pp_fx

./: .gitignore  pyproject.toml
docs/architecture/code_examples/: INDEX.md  README.md
docs/architecture/code_examples/pp_fx_architecture_examples/: __init__.py
docs/architecture/code_examples/pp_fx_architecture_examples/adapters/: __init__.py  fakes.py  recording.py
docs/architecture/code_examples/pp_fx_architecture_examples/application/: __init__.py
docs/architecture/code_examples/pp_fx_architecture_examples/catalog/: __init__.py  channels.py  parameters.py
docs/architecture/code_examples/pp_fx_architecture_examples/composition/: README.md  __init__.py  bootstrap.py
docs/architecture/code_examples/pp_fx_architecture_examples/delivery/: README.md  __init__.py  outcome_mapping.py  python_facade.py  request_dtos.py  request_mapping.py
docs/architecture/code_examples/pp_fx_architecture_examples/domain/: README.md  __init__.py  failures.py  graph.py  identifiers.py  results.py  scopes.py  units.py  windows.py
docs/architecture/code_examples/pp_fx_architecture_examples/function_pack/: __init__.py  configuration.py  derived_channels.py  kpis.py  (+3 more)
docs/architecture/code_examples/tests/: test_application_contracts.py  test_application_ports.py  test_compiled_graph.py  test_composition_walkthrough.py  test_delivery_boundaries.py  test_detected_window_fanout.py  test_domain_values.py  test_pandas_table_boundary.py  test_plugin_api_contracts.py  test_plugin_mapping_adapter.py  test_process_dataset_service.py  test_scaffold_contracts.py
src/pp_fx/: __init__.py
(+44 files in other folders)
